cmake_minimum_required(VERSION 2.8.7)
project(caffe_test)

set(SOURCE_FILE with_caffe.cpp)
add_definitions(-DCPU_ONLY)
find_package(OpenCV 3.3)
find_package(Boost)
find_package(glog)
set(CMAKE_BUILD_TYPE Debug)
include_directories(../include)
include_directories(/home/fjh/caffe_ssd/include)
link_directories(../cmake-build-debug)
link_directories(/home/fjh/caffe_ssd/lib)
add_executable(caffe_test ${SOURCE_FILE})
target_link_libraries(caffe_test -pthread  -lcaffe -lmdl  ${OpenCV_LIBS} -lboost_system -lglog)
